@@ -2222,6 +2222,15 @@ typedef struct tagMINIMIZEDMETRICS {
 	int iVertGap;
 	int iArrange;
 } MINIMIZEDMETRICS,*LPMINIMIZEDMETRICS;
+typedef struct tagMOUSEKEYS{
+	UINT cbSize;
+	DWORD dwFlags;
+	DWORD iMaxSpeed;
+	DWORD iTimeToMaxSpeed;
+	DWORD iCtrlSpeed;
+	DWORD dwReserved1;
+	DWORD dwReserved2;
+} MOUSEKEYS, *LPMOUSEKEYS;
 typedef struct tagNONCLIENTMETRICSA {
 	UINT cbSize;
 	int iBorderWidth;
